src/test/deca/syntax/invalid/created/class_without/methodParams_noIdentifier.deca
// Description:
//      Utilisation d'une methode sans signature
// Resultats:
//      Error syntax Ligne 7 : missing IDENT at ')'

class A {
    int getX(int ){}
}